# oop-uzduotis-1-2

./: CMakeLists.txt  Doxyfile  Funkcijos.h  Header.h  README.md  Setup.msi  Student.cpp  Student.h  compareByLastName.cpp  compareByLastName.h  createDir.cpp  createDir.h  isBad.cpp  isBad.h  main.cpp  myVector.h  nuskaitymas.cpp  nuskaitymas.h  nuskaitymasDeque.cpp  nuskaitymasVector.cpp  randomFileGenerator.cpp  randomFileGenerator.h  readValues.cpp  readValues.h  readValuesDeque.cpp  readValuesList.cpp  skaiciavimas.cpp  skaiciavimas.h  sortLosersAndWinners.cpp  sortLosersAndWinners.h  sortLosersAndWinnersList.cpp  strategyD.cpp  strategyL.cpp  strategyOne.cpp  strategyOne.h  strategyTwo.cpp  strategyTwo.h  unitTesting.cpp  unitTesting.h
Example text files/: studentai10000.txt
doxygen/html/: _student_8cpp.html  _student_8cpp__incl.dot  _student_8cpp_source.html  _student_8h.html  _student_8h.js  _student_8h__dep__incl.dot  _student_8h__incl.dot  _student_8h_source.html  annotated.html  class_human-members.html  class_human.html  class_human.js  class_human__coll__graph.dot  class_human_a2894077e70890ecb62593b1fe1a5f343_icgraph.dot  class_student-members.html  (+161 more)
include/: Funkcijos.h  Header.h  compareByLastName.cpp  createDir.cpp  nuskaitymasDeque.cpp  nuskaitymasList.cpp  nuskaitymasVector.cpp  randomFileGenerator.cpp  readValuesDeque.cpp  readValuesList.cpp  readValuesVector.cpp  skaiciavimas.cpp  sortLosersAndWinnersDeque.cpp  sortLosersAndWinnersList.cpp  sortLosersAndWinnersVector.cpp  sortStudents.cpp  strategy.cpp  strategyD.cpp  strategyL.cpp  strategyV.cpp
(+150 files in other folders)
